<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/forgotPasswordFragment"
    >

    <TextView
        android:id="@+id/forgot_password_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/m40"
        style="@style/LargeTextStyle"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgotPasswordEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/m40"
        android:layout_marginVertical="@dimen/m100"
        android:text="@string/email_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_head" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutForgotPasswordEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordEmailLabel"
        android:layout_marginHorizontal="@dimen/m40"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgotPasswordEditEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_email_placeholder" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sendEmailCodeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_code"
        android:textColor="@color/white"
        android:layout_marginBottom="@dimen/m40"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>