<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/customBottomNavLayout"
>
    <ImageView
        android:id="@+id/iconMap"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/m20"
        android:contentDescription="@string/map"
        android:src="@drawable/ic_map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/iconList"

        />

    <ImageView
        android:id="@+id/iconList"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/m20"
        android:contentDescription="@string/document"
        android:src="@drawable/ic_feed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/iconMap"
        app:layout_constraintEnd_toStartOf="@+id/iconProfile"
/>

    <ImageView
        android:id="@+id/iconProfile"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/m20"
        android:contentDescription="@string/contact"
        android:src="@drawable/ic_person"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/iconList"
        app:layout_constraintEnd_toEndOf="parent"

        />
</androidx.constraintlayout.widget.ConstraintLayout>