<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="model"
            type="eu.mcomputing.mobv.mobvzadanie.viewmodels.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ChangePasswordFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/change_password_head"
            style="@style/LargeTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m40"
            android:text="@string/change_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/forgotPasswordResetPasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/m40"
            android:layout_marginTop="@dimen/m40"
            android:text="@string/old_password_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/change_password_head" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutResetEditPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/m40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgotPasswordResetPasswordLabel">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/changePasswordEditOldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_old_password"
                android:text="@={model.changePasswordOld}"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/forgotPasswordResetPasswordRepeatLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/m40"
            android:layout_marginTop="@dimen/m20"
            android:text="@string/new_password_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutResetEditPassword" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutResetEditRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/m40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgotPasswordResetPasswordRepeatLabel">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/changePasswordEditNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_new_password_placeholder"
                android:text="@={model.changePasswordNew}"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/changePasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/m40"
            android:text="@string/reset_password"
            android:textColor="@color/white"
            android:onClick="@{()->model.changePassword()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>