<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="model"
            type="eu.mcomputing.mobv.mobvzadanie.viewmodels.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/registration_head"
            style="@style/LargeTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/m40"
            android:layout_marginTop="68dp"
            android:text="@string/email_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/registration_head" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/m40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailLabel">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmailReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email_placeholder"
                android:text="@={model.email}"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/userNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/m40"
            android:layout_marginTop="@dimen/m20"
            android:text="Username:"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail" />

        <!--    <EditText-->
        <!--        android:id="@+id/editUsername"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:autofillHints="Zadajte username"-->
        <!--        android:hint="Zadajte username"-->
        <!--        android:inputType="textAutoComplete"-->
        <!--        app:layout_constraintEnd_toEndOf="parent"-->
        <!--        app:layout_constraintStart_toStartOf="parent"-->
        <!--        app:layout_constraintTop_toBottomOf="@+id/userNameLabel" />-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/m40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userNameLabel">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_username_placeholder"
                android:text="@={model.username}"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/m40"
            android:layout_marginTop="@dimen/m20"
            android:text="Password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutUsername" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/m40"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordLabel">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPasswordReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password_placeholder"
                android:text="@={model.password}"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/repeatPasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/m40"
            android:layout_marginTop="20dp"
            android:text="Repeat password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutPassword" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/m40"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repeatPasswordLabel">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editRepeatPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repeat_password_placeholder"
                android:text="@={model.repeatPassword}"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/alreadyLoggedInLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/m20"
            android:layout_marginStart="@dimen/m40"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/already_logged_in_question"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutRepeatPassword" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/m40"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:onClick="@{()->model.registerUser()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>